correction SCSS version mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -306,7 +306,7 @@ height       : auto;
                     font-weight: lighter;
                     position   : absolute;
                     top        : 190px;
-                    left       : 300px;
+                    left       : 80%;
                     color: black;
 
                    }
@@ -323,7 +323,7 @@ height       : auto;
                        padding-top: 5px;
                        position: absolute;
                        top: 10px;
-                       left: 260px;
+                       left: 70%;
                        
 
                    }
@@ -567,7 +567,8 @@ height       : auto;
 /**Translation *******************/
 .carte__menu__box--iteme:hover .points {
     animation: petit_points 0.5s ease-in-out;
-    animation-fill-mode: both;
+    animation-fill-mode: forwards;
+    
     
 }    
 
@@ -587,7 +588,7 @@ height       : auto;
 
 .carte__menu__box--iteme:hover .carte__menu__box--iteme--prix {
     animation: prix 0.4s ease-in-out;
-    animation-fill-mode: both;
+    animation-fill-mode: forwards;
 }    
 
 @keyframes prix {
@@ -616,7 +617,7 @@ height       : auto;
 
     to {
         opacity: 1;
-        transform: translateX(-197%);
+        transform: translateX(-188%);
     }
 }
 
